UI: Fix field overflow if text has extra long words
Closes #975

--- a/strictdoc/export/html/_static/form.css
+++ b/strictdoc/export/html/_static/form.css
@@ -277,6 +277,8 @@ sdoc-form-error + sdoc-form-field sdoc-contenteditable::before {
 
 [contenteditable=true] {
   white-space: pre-wrap;
+  word-break: break-word;
+  overflow-wrap: anywhere;
   outline: none;
   /* Without this hack ( display: inline-block )
      Chrome generates duplicated new lines when Enter pressed.
